mudaça no projeto, alteracao do banner e do botao

--- a/salame.html
+++ b/salame.html
@@ -16,9 +16,13 @@
 
             <ul class="menu" >
                 <div class="botao" onclick="abririndex()" id="inicioBotão">
-                    <li><a href="">INICIO</a></li> 
+                    <a href="">INICIO</a>
                 </div>
-                <li> <a href="/">🛒</a></li>
+
+                <ul class="carrinho">
+                     <a href="carrinho.html">🛒</a>
+                </ul>
+            </div>
             </ul>
         </nav>
     </header>
