--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav>
             <ul class="menu">
                 <a> Meu carrinho</a>
-                <li> <a href="/">🛒</a></li>
+                <li> <a href="carrinho.html">🛒</a></li>
             </ul>
             
         </nav>    
@@ -48,10 +48,10 @@
           <img src="img/fundoqueijo.png" alt="Imagem 1">
         </div>
         <div class="slide" id="slide2">
-          <img src="img/banner2.webp" alt="Imagem 2">
+          <img src="img/banner3.jpg" alt="Imagem 2">
         </div>
         <div class="slide" id="slide3">
-          <img src="img/banner3.webp" alt="Imagem 3">
+          <img src="img/banner2.jpg" alt="Imagem 3">
         </div>
       </div>
 
