--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav>
             <ul class="menu">
                 <a> Meu carrinho</a>
-                <li> <a href="carrinho.html">🛒</a></li>
+                <li> <a href="carrinho.php">🛒</a></li>
             </ul>
             
         </nav>    
