ajuste nos produtos 17/06

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
 
         <div>
-            <button onclick="abrirpimenta()" id="pimentaBotao">
+            <button onclick="abrirdoce()" id="doceBotao">
                 <img src="img/doce.jpg" width="400" height="250">
                 <p>Doces</p>
             </button>
@@ -102,9 +102,9 @@
         </div>
 
         <div>
-            <button onclick="abrirpimenta()" id="pimentaBotao">
-                <img src="img/pimenta.jpg" width="400" height="250">
-                <p>Farinha</p>
+            <button onclick="abrirvinho()" id="pimentaBotao">
+                <img src="img/vinhoooo.jpg" width="350" height="250">
+                <p>Vinho</p>
             </button>
             <h3 id="frase"></h3>
         </div>
