--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <div>
             <button onclick="abrirvinho()" id="pimentaBotao">
-                <img src="img/vinhoooo.jpg" width="350" height="250">
+                <img src="img/vinnn.jpg" width="350" height="250">
                 <p>Vinho</p>
             </button>
             <h3 id="frase"></h3>
